# csci5708-spring26

./: .gitignore
hw2/: solution.json
hw3/: assignment.md  solution.json
lab0/: CMakeLists.txt  README.md
lab0/data/: enroll.csv  majors.csv  students.csv
lab0/include/: csv.h  db.h  operators.h
lab0/src/: csv.c  db.c  main.c  operators.c
lab0/tests/: test_lab0.c
lab1/: README.md  buf_init.c  buf_internals.h  buffer_add.sql  bufmgr.c  freelist_template.c  postgresql.conf
lab2/: README.md  nbtinsert.c  nbtree.c  nbtsearch.c
